--- a/customerKaggleProva.ipynb
+++ b/customerKaggleProva.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NIhTAMZK_qLevS0ro0-fYvXtY-VleWjw",
-      "authorship_tag": "ABX9TyM8VSR9XiQCGFtA1IGOeR0P",
+      "authorship_tag": "ABX9TyNU4jL34ganFD3gi30LSzJK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,14 +54,16 @@
         "\n",
         "import sklearn.metrics as metrics\n",
         "import sklearn\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from tensorflow import feature_column\n",
         "from tensorflow.keras import layers\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -83,7 +85,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "27ab0a97-632b-4da8-a0d8-109060941bea"
+        "outputId": "fbdba91c-2fd0-4c1d-cb2f-f3c7af07f3c6"
       },
       "source": [
         "# Path of the file to read\n",
@@ -96,7 +98,7 @@
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 21,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +284,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 77
         }
       ]
     },
@@ -305,7 +307,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "2fca5269-6349-46c3-9dc5-940ea5e0b74b"
+        "outputId": "19d80230-42ff-470d-ce0f-ba9c914f7ede"
       },
       "source": [
         "#tutte le colonne che contengono stringhe devono essere trasformate in colonne che contengono interi \n",
@@ -316,7 +318,7 @@
         "# mostro il dataset dopo l'operazione\n",
         "df.head()"
       ],
-      "execution_count": 22,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +504,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 78
         }
       ]
     },
@@ -525,14 +527,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "2844e838-4898-4c96-cd46-fe5419166118"
+        "outputId": "aa7b514b-757f-4652-ec4a-ba775dcfa690"
       },
       "source": [
         "# Procediamo con l'eliminazione dei dati non validi (NaN)\n",
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 23,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,7 +720,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 79
         }
       ]
     },
@@ -739,15 +741,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 215
         },
-        "outputId": "d8b55301-d983-43a3-f54a-147b4b09cd51"
+        "outputId": "a4a0ae98-e27e-4951-c575-61d3287a2886"
       },
       "source": [
         "df = df.drop(['customerID', 'gender', 'tenure','PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies'], axis=1)\n",
         "df.head()"
       ],
-      "execution_count": 24,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +863,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 80
         }
       ]
     },
@@ -872,7 +874,7 @@
         "colab_type": "text"
       },
       "source": [
-        "preparazione modello"
+        "preparazione modello, addestramento validazione e test"
       ]
     },
     {
@@ -882,114 +884,40 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 67
         },
-        "outputId": "1b5b9ed5-9ea9-4f5b-e779-68e6ae790e02"
+        "outputId": "b14cb0f2-2795-4154-ea51-6a1286cffee1"
       },
       "source": [
-        "train, test = train_test_split(df)\n",
-        "features = ['SeniorCitizen','Partner','Dependents','Contract','PaperlessBilling','PaymentMethod','MonthlyCharges','TotalCharges']\n",
-        "X = train[features]\n",
-        "Y = train['Churn']\n",
-        "X_test = test[features]\n",
-        "Y_test =test['Churn']\n",
-        "\n",
+        "#dataset diviso tra colonna churn (y) e le altre colonne (x) \n",
+        "y = df.Churn\n",
+        "x = df\n",
+        "#dataset diviso per la parte di addestramento ,validazione e test\n",
+        "train_X, val_X, train_y, val_y = train_test_split(x, y, test_size=0.2)\n",
+        "train_X, test_X, train_y, test_y = train_test_split(train_X, train_y, test_size=0.1)\n",
         "\n",
         "# Specify Model\n",
         "model = DecisionTreeClassifier(random_state=1)\n",
         "# Fit Model\n",
-        "model.fit(X, Y)"
-      ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='gini',\n",
-              "                       max_depth=None, max_features=None, max_leaf_nodes=None,\n",
-              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-              "                       min_samples_leaf=1, min_samples_split=2,\n",
-              "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
-              "                       random_state=1, splitter='best')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7Oy3nSsh-ZQo",
-        "colab_type": "text"
-      },
-      "source": [
-        "addestramento"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LuFeaGPr-p_A",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1328fe11-71a4-43a3-d7ac-5cabf49e16e6"
-      },
-      "source": [
-        "train_predictions = model.predict(X)\n",
-        "train_acc = metrics.accuracy_score(Y,train_predictions)\n",
-        "print('Accuracy train: %s'  % train_acc)"
-      ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy train: 0.9981065088757396\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ucsz1jvO4-hV",
-        "colab_type": "text"
-      },
-      "source": [
-        "test"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "coTs-kPqJJAb",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "ae71f5ce-4f85-429a-ddf8-a9d0bb683903"
-      },
-      "source": [
-        "test_predictions = model.predict(X_test)\n",
-        "test_acc=metrics.accuracy_score(Y_test,test_predictions)\n",
+        "model.fit(train_X, train_y)\n",
+        "\n",
+        "train_acc = model.score(train_X, train_y)\n",
+        "prediction = model.predict(val_X)\n",
+        "validation_acc = accuracy_score(val_y, predict_dc.round())\n",
+        "print('Accuracy train: %s'  % train_acc)\n",
+        "print('Accuracy validation: %s'  % validation_acc)\n",
+        "pred_dc = model.predict(test_X)\n",
+        "test_acc = accuracy_score(test_y, pred_dc.round())\n",
         "print('Accuracy test: %s'  % test_acc)\n"
       ],
-      "execution_count": 27,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy test: 0.7146912704045423\n"
+            "Accuracy train: 1.0\n",
+            "Accuracy validation: 0.6042590949423248\n",
+            "Accuracy test: 1.0\n"
           ],
           "name": "stdout"
         }
