--- a/customerKaggleProva.ipynb
+++ b/customerKaggleProva.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NIhTAMZK_qLevS0ro0-fYvXtY-VleWjw",
-      "authorship_tag": "ABX9TyNU4jL34ganFD3gi30LSzJK",
+      "authorship_tag": "ABX9TyN2Po/Y8UkdEWMI/BjANqW5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n"
       ],
-      "execution_count": 76,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "fbdba91c-2fd0-4c1d-cb2f-f3c7af07f3c6"
+        "outputId": "10834e71-acd9-48b8-f6b3-d5ed5e9fe80b"
       },
       "source": [
         "# Path of the file to read\n",
@@ -98,7 +98,7 @@
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 77,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 91
         }
       ]
     },
@@ -307,7 +307,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "19d80230-42ff-470d-ce0f-ba9c914f7ede"
+        "outputId": "764397bb-4007-432c-b4e2-685d9c26175b"
       },
       "source": [
         "#tutte le colonne che contengono stringhe devono essere trasformate in colonne che contengono interi \n",
@@ -318,7 +318,7 @@
         "# mostro il dataset dopo l'operazione\n",
         "df.head()"
       ],
-      "execution_count": 78,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 92
         }
       ]
     },
@@ -527,14 +527,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "aa7b514b-757f-4652-ec4a-ba775dcfa690"
+        "outputId": "dab00c82-9f28-4b47-84f1-fd19406e7581"
       },
       "source": [
         "# Procediamo con l'eliminazione dei dati non validi (NaN)\n",
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 79,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +720,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 93
         }
       ]
     },
@@ -743,13 +743,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "a4a0ae98-e27e-4951-c575-61d3287a2886"
+        "outputId": "1665cb32-3355-4066-863e-3f0915c0c435"
       },
       "source": [
         "df = df.drop(['customerID', 'gender', 'tenure','PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies'], axis=1)\n",
         "df.head()"
       ],
-      "execution_count": 80,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,7 +863,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 94
         }
       ]
     },
@@ -886,10 +886,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "b14cb0f2-2795-4154-ea51-6a1286cffee1"
+        "outputId": "2177ef57-dc0c-42c5-d3c2-e3b004b11b80"
       },
       "source": [
-        "#dataset diviso tra colonna churn (y) e le altre colonne (x) \n",
+        "#dataset diviso tra colonna churn (y) e le altre colonne  \n",
         "y = df.Churn\n",
         "x = df\n",
         "#dataset diviso per la parte di addestramento ,validazione e test\n",
@@ -903,20 +903,20 @@
         "\n",
         "train_acc = model.score(train_X, train_y)\n",
         "prediction = model.predict(val_X)\n",
-        "validation_acc = accuracy_score(val_y, predict_dc.round())\n",
+        "validation_acc = accuracy_score(val_y, prediction.round())\n",
         "print('Accuracy train: %s'  % train_acc)\n",
         "print('Accuracy validation: %s'  % validation_acc)\n",
         "pred_dc = model.predict(test_X)\n",
         "test_acc = accuracy_score(test_y, pred_dc.round())\n",
         "print('Accuracy test: %s'  % test_acc)\n"
       ],
-      "execution_count": 82,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Accuracy train: 1.0\n",
-            "Accuracy validation: 0.6042590949423248\n",
+            "Accuracy validation: 1.0\n",
             "Accuracy test: 1.0\n"
           ],
           "name": "stdout"
