--- a/customerTensorflowProva.ipynb
+++ b/customerTensorflowProva.ipynb
@@ -6,7 +6,7 @@
       "name": "customerTensorflowProva.ipynb",
       "provenance": [],
       "mount_file_id": "1MOl10dr-xObOTQROUcS5k60bHbc-QWX7",
-      "authorship_tag": "ABX9TyOp7TKOvhsbwkIEsPkbVXHP",
+      "authorship_tag": "ABX9TyNHLNm8z3La2zSui0Veu0Cp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "98783801-5301-4ec5-ebef-6a4a79764f49"
+        "outputId": "2e5f0eca-2147-4cf4-ed51-6c6717749642"
       },
       "source": [
         "import numpy as np\n",
@@ -60,10 +60,9 @@
         "data_path =\"/content/drive/My Drive/WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
         "df = pd.read_csv(data_path)\n",
         "target_label =\"Churn\"\n",
-        "df.head()\n",
-        "\n"
+        "df.head()\n"
       ],
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +228,7 @@
               "      <td>Yes</td>\n",
               "      <td>Bank transfer (automatic)</td>\n",
               "      <td>61.90</td>\n",
-              "      <td></td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -241,7 +240,7 @@
               "1    No  6035-RIIOM  ...          97.20       5129.45\n",
               "2   Yes  3797-VTIDR  ...          23.45         23.45\n",
               "3   Yes  2568-BRGYX  ...          70.20        237.95\n",
-              "4    No  2775-SEFEE  ...          61.90              \n",
+              "4    No  2775-SEFEE  ...          61.90           NaN\n",
               "\n",
               "[5 rows x 21 columns]"
             ]
@@ -249,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
     },
@@ -272,7 +271,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "4d323462-2cdd-4332-9f71-e3bfe3eaae0e"
+        "outputId": "711ad5ed-cc5b-4f40-a99f-be7b4d0a4b39"
       },
       "source": [
         "#tutte le colonne che contengono stringhe devono essere trasformate in colonne che contengono interi \n",
@@ -283,7 +282,7 @@
         "# mostro il dataset dopo l'operazione\n",
         "df.head()\n"
       ],
-      "execution_count": 37,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +352,7 @@
               "      <td>0</td>\n",
               "      <td>3</td>\n",
               "      <td>586</td>\n",
-              "      <td>492</td>\n",
+              "      <td>491</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -377,7 +376,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>1170</td>\n",
-              "      <td>3511</td>\n",
+              "      <td>3510</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -401,7 +400,7 @@
               "      <td>1</td>\n",
               "      <td>2</td>\n",
               "      <td>59</td>\n",
-              "      <td>1566</td>\n",
+              "      <td>1565</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -425,7 +424,7 @@
               "      <td>1</td>\n",
               "      <td>2</td>\n",
               "      <td>674</td>\n",
-              "      <td>1627</td>\n",
+              "      <td>1626</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -449,7 +448,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>546</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -457,11 +456,11 @@
             ],
             "text/plain": [
               "   Churn  customerID  gender  ...  PaymentMethod  MonthlyCharges  TotalCharges\n",
-              "0      0        2370       0  ...              3             586           492\n",
-              "1      0        3457       0  ...              0            1170          3511\n",
-              "2      1        2149       1  ...              2              59          1566\n",
-              "3      1        1426       1  ...              2             674          1627\n",
-              "4      0        1545       1  ...              0             546             0\n",
+              "0      0        2370       0  ...              3             586           491\n",
+              "1      0        3457       0  ...              0            1170          3510\n",
+              "2      1        2149       1  ...              2              59          1565\n",
+              "3      1        1426       1  ...              2             674          1626\n",
+              "4      0        1545       1  ...              0             546            -1\n",
               "\n",
               "[5 rows x 21 columns]"
             ]
@@ -469,7 +468,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 5
         }
       ]
     },
@@ -1662,16 +1661,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SpHIDPTeuLpo",
-        "colab_type": "text"
-      },
-      "source": [
-        "# New Section"
       ]
     }
   ]
