--- a/customerKaggle.ipynb
+++ b/customerKaggle.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AxMn6ZWpJDutd2yIVMIQRJszWCW_zb7F",
-      "authorship_tag": "ABX9TyMz6gWov9ZNiAsAiQ38JJwJ",
+      "authorship_tag": "ABX9TyM+hnNpi+WBcf2tOq7MkMd9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,12 +93,7 @@
         "# Path of the file to read\n",
         "customer_file_path = \"/content/drive/My Drive/WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
         "df = pd.read_csv(customer_file_path)\n",
-        "df.head()\n",
-        "# Sostituisco ad ogni stringa vuota il valore 'NaN'\n",
-        "#df.replace(\"\", np.nan, inplace=True)\n",
-        "#df.replace(\" \", np.nan, inplace=True)\n",
-        "#df.replace(\"?\", np.nan, inplace=True)\n",
-        "#df.head()"
+        "df.head()\n"
       ],
       "execution_count": 71,
       "outputs": [
@@ -287,210 +282,6 @@
             "tags": []
           },
           "execution_count": 71
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RPmXVm5j5dwX",
-        "colab_type": "text"
-      },
-      "source": [
-        "eliminazione elementi nulli"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "b8thvsI2UhxE",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 215
-        },
-        "outputId": "f8ed5484-1ad6-448b-faf8-27af07037384"
-      },
-      "source": [
-        "# Procediamo con l'eliminazione dei dati non validi (NaN)\n",
-        "#df.dropna(inplace=True)\n",
-        "#df.head()"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Churn</th>\n",
-              "      <th>customerID</th>\n",
-              "      <th>SeniorCitizen</th>\n",
-              "      <th>Dependents</th>\n",
-              "      <th>tenure</th>\n",
-              "      <th>PhoneService</th>\n",
-              "      <th>MultipleLines</th>\n",
-              "      <th>InternetService</th>\n",
-              "      <th>OnlineSecurity</th>\n",
-              "      <th>OnlineBackup</th>\n",
-              "      <th>DeviceProtection</th>\n",
-              "      <th>TechSupport</th>\n",
-              "      <th>StreamingTV</th>\n",
-              "      <th>StreamingMovies</th>\n",
-              "      <th>Contract</th>\n",
-              "      <th>PaperlessBilling</th>\n",
-              "      <th>PaymentMethod</th>\n",
-              "      <th>MonthlyCharges</th>\n",
-              "      <th>TotalCharges</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>2364</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>20</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>585</td>\n",
-              "      <td>491</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>3448</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>53</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1169</td>\n",
-              "      <td>3510</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1</td>\n",
-              "      <td>2143</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>59</td>\n",
-              "      <td>1565</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1424</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>673</td>\n",
-              "      <td>1626</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>0</td>\n",
-              "      <td>2394</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>660</td>\n",
-              "      <td>3548</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   Churn  customerID  ...  MonthlyCharges  TotalCharges\n",
-              "0      0        2364  ...             585           491\n",
-              "1      0        3448  ...            1169          3510\n",
-              "2      1        2143  ...              59          1565\n",
-              "3      1        1424  ...             673          1626\n",
-              "5      0        2394  ...             660          3548\n",
-              "\n",
-              "[5 rows x 19 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
         }
       ]
     },
@@ -718,16 +509,6 @@
           },
           "execution_count": 72
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PEhW1i-zUfTF",
-        "colab_type": "text"
-      },
-      "source": [
-        "eliminazione colonne nulle"
       ]
     },
     {
