--- a/customerTensorflowProva.ipynb
+++ b/customerTensorflowProva.ipynb
@@ -6,7 +6,7 @@
       "name": "customerTensorflowProva.ipynb",
       "provenance": [],
       "mount_file_id": "1MOl10dr-xObOTQROUcS5k60bHbc-QWX7",
-      "authorship_tag": "ABX9TyMGcvSngd6tFDC4H1cYIkfI",
+      "authorship_tag": "ABX9TyOE5L38ByC42WcoPtPFC8cP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "f775c183-76a6-4ee3-b0a1-1c52705282c9"
+        "outputId": "5e7690ad-e9d0-4ce5-dc9f-a6ecffd82798"
       },
       "source": [
         "import numpy as np\n",
@@ -62,7 +62,7 @@
         "target_label =\"Churn\"\n",
         "df.head()\n"
       ],
-      "execution_count": 37,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 47
         }
       ]
     },
@@ -271,16 +271,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "b067fd08-6ea9-4411-a56b-423e4c013225"
+        "outputId": "a5fe3db4-7856-404c-f7e8-7e7a60daa286"
       },
       "source": [
-        "# Sostituisco ad ogni stringa vuola il valore 'NaN'\n",
+        "# Sostituisco ad ogni stringa vuota il valore 'NaN'\n",
         "df.replace(\"\", np.nan, inplace=True)\n",
         "df.replace(\" \", np.nan, inplace=True)\n",
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 38,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +466,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 48
         }
       ]
     },
@@ -489,7 +489,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "028d5f9e-80f9-4a66-a6ed-9797b253ea2e"
+        "outputId": "6b7bb153-96a0-4ce1-8818-73d15ab2c0bd"
       },
       "source": [
         "\n",
@@ -497,7 +497,7 @@
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 41,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 49
         }
       ]
     },
@@ -694,7 +694,7 @@
         "colab_type": "text"
       },
       "source": [
-        "conversione degli elementi presenti in tabella in interi "
+        "conversione degli elementi presenti in tabella in float"
       ]
     },
     {
@@ -706,16 +706,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "4ccefd87-8f47-4837-eb81-e6b589ab422b"
+        "outputId": "4c91c938-4612-4ec1-bf23-cfd2173a0350"
       },
       "source": [
-        "#tutte le colonne che contengono stringhe devono essere trasformate in colonne che contengono interi \n",
-        "#for elemento in df:\n",
-        " \n",
-        "   #df[elemento] = pd.Categorical(df[elemento])\n",
-        "   #df[elemento] = getattr(df, elemento).cat.codes\n",
-        "   #mostro il dataset dopo l'operazione\n",
-        "#df.head()\n",
+        "\n",
         "\n",
         "for elemento in df:\n",
         "  if elemento==\"MonthlyCharges\" or elemento==\"TotalCharges\" or elemento==\"tenure\":\n",
@@ -725,7 +719,7 @@
         "# mostro il dataset dopo l'operazione\n",
         "df.head()\n"
       ],
-      "execution_count": 42,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,7 +905,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 50
         }
       ]
     },
@@ -951,7 +945,7 @@
         "train, test = train_test_split(df, test_size=0.1)\n",
         "train, val = train_test_split(train, test_size=0.1)"
       ],
-      "execution_count": 43,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -973,7 +967,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "6f79aa95-8019-4dd2-dd3c-04bad21d3c6b"
+        "outputId": "f438634d-7fcf-4e1a-c92d-f91c07ac39dd"
       },
       "source": [
         "# Creazione  del training\n",
@@ -982,77 +976,77 @@
         "#addestramento e impostazione epoche\n",
         "model.fit(train_dataset, epochs=30)"
       ],
-      "execution_count": 44,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/30\n",
-            "WARNING:tensorflow:Layer dense_18 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
+            "WARNING:tensorflow:Layer dense_21 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
             "\n",
             "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
             "\n",
             "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
             "\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 12.7674 - accuracy: 0.6836\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 11.2776 - accuracy: 0.6728\n",
             "Epoch 2/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.9631 - accuracy: 0.7319\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 1.0501 - accuracy: 0.7143\n",
             "Epoch 3/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5823 - accuracy: 0.7400\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5533 - accuracy: 0.7486\n",
             "Epoch 4/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5332 - accuracy: 0.7510\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5190 - accuracy: 0.7497\n",
             "Epoch 5/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5064 - accuracy: 0.7538\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5035 - accuracy: 0.7488\n",
             "Epoch 6/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4923 - accuracy: 0.7648\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4983 - accuracy: 0.7545\n",
             "Epoch 7/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5179 - accuracy: 0.7591\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.5319 - accuracy: 0.7596\n",
             "Epoch 8/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4932 - accuracy: 0.7655\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4858 - accuracy: 0.7576\n",
             "Epoch 9/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4827 - accuracy: 0.7648\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4884 - accuracy: 0.7516\n",
             "Epoch 10/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4825 - accuracy: 0.7650\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4884 - accuracy: 0.7596\n",
             "Epoch 11/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4834 - accuracy: 0.7633\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4832 - accuracy: 0.7538\n",
             "Epoch 12/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4787 - accuracy: 0.7692\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4765 - accuracy: 0.7648\n",
             "Epoch 13/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4743 - accuracy: 0.7736\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4810 - accuracy: 0.7600\n",
             "Epoch 14/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4775 - accuracy: 0.7756\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4915 - accuracy: 0.7582\n",
             "Epoch 15/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4781 - accuracy: 0.7732\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4686 - accuracy: 0.7626\n",
             "Epoch 16/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4749 - accuracy: 0.7751\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4693 - accuracy: 0.7677\n",
             "Epoch 17/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4736 - accuracy: 0.7749\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4644 - accuracy: 0.7697\n",
             "Epoch 18/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4765 - accuracy: 0.7732\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4690 - accuracy: 0.7655\n",
             "Epoch 19/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4874 - accuracy: 0.7809\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4653 - accuracy: 0.7675\n",
             "Epoch 20/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4727 - accuracy: 0.7767\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4674 - accuracy: 0.7600\n",
             "Epoch 21/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4810 - accuracy: 0.7762\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4643 - accuracy: 0.7679\n",
             "Epoch 22/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4745 - accuracy: 0.7789\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4599 - accuracy: 0.7734\n",
             "Epoch 23/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4732 - accuracy: 0.7760\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4656 - accuracy: 0.7738\n",
             "Epoch 24/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4800 - accuracy: 0.7756\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4597 - accuracy: 0.7712\n",
             "Epoch 25/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4718 - accuracy: 0.7802\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4583 - accuracy: 0.7708\n",
             "Epoch 26/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4687 - accuracy: 0.7817\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4591 - accuracy: 0.7782\n",
             "Epoch 27/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4722 - accuracy: 0.7756\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4603 - accuracy: 0.7712\n",
             "Epoch 28/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4602 - accuracy: 0.7789\n",
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4603 - accuracy: 0.7672\n",
             "Epoch 29/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4694 - accuracy: 0.7789\n",
+            "4554/4554 [==============================] - 7s 1ms/step - loss: 0.4613 - accuracy: 0.7721\n",
             "Epoch 30/30\n",
-            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4755 - accuracy: 0.7769\n"
+            "4554/4554 [==============================] - 6s 1ms/step - loss: 0.4609 - accuracy: 0.7697\n"
           ],
           "name": "stdout"
         },
@@ -1060,13 +1054,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f3864964208>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f3864964470>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 52
         }
       ]
     },
@@ -1089,7 +1083,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "cd950a87-81c0-44f4-e372-e1d2d2f5ecab"
+        "outputId": "2ac99e33-1c2b-4290-ca37-f5c55a8fe31d"
       },
       "source": [
         "# Creazione del  test \n",
@@ -1100,15 +1094,15 @@
         "test_loss, test_accuracy = model.evaluate(test_dataset)\n",
         "print('\\n\\nTest Loss {}, Test Accuracy {}'.format(test_loss, test_accuracy))"
       ],
-      "execution_count": 45,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "563/563 [==============================] - 1s 964us/step - loss: 0.4613 - accuracy: 0.7709\n",
+            "563/563 [==============================] - 1s 1ms/step - loss: 0.4436 - accuracy: 0.7886\n",
             "\n",
             "\n",
-            "Test Loss 0.46128252148628235, Test Accuracy 0.7708703279495239\n"
+            "Test Loss 0.4435825049877167, Test Accuracy 0.788632333278656\n"
           ],
           "name": "stdout"
         }
@@ -1133,7 +1127,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "838004b5-8c07-466c-e971-d864a18a5550"
+        "outputId": "15f03588-70e3-4b85-a7e5-bdcfa7504452"
       },
       "source": [
         "#valutazione\n",
@@ -1152,21 +1146,21 @@
         "        \" | Actual outcome: \",\n",
         "        (\"yes\" if bool(yes) else \"no\"))\n"
       ],
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Predicted yes: 22.80%  | Actual outcome:  no\n",
-            "Predicted yes: 13.27%  | Actual outcome:  no\n",
-            "Predicted yes: 77.27%  | Actual outcome:  yes\n",
-            "Predicted yes: 13.27%  | Actual outcome:  no\n",
-            "Predicted yes: 65.58%  | Actual outcome:  yes\n",
-            "Predicted yes: 21.99%  | Actual outcome:  no\n",
-            "Predicted yes: 9.37%  | Actual outcome:  no\n",
-            "Predicted yes: 79.08%  | Actual outcome:  yes\n",
-            "Predicted yes: 10.94%  | Actual outcome:  no\n",
-            "Predicted yes: 54.33%  | Actual outcome:  yes\n"
+            "Predicted yes: 9.99%  | Actual outcome:  no\n",
+            "Predicted yes: 6.65%  | Actual outcome:  yes\n",
+            "Predicted yes: 0.31%  | Actual outcome:  no\n",
+            "Predicted yes: 0.66%  | Actual outcome:  no\n",
+            "Predicted yes: 41.13%  | Actual outcome:  no\n",
+            "Predicted yes: 12.88%  | Actual outcome:  no\n",
+            "Predicted yes: 2.93%  | Actual outcome:  no\n",
+            "Predicted yes: 25.69%  | Actual outcome:  yes\n",
+            "Predicted yes: 71.22%  | Actual outcome:  yes\n",
+            "Predicted yes: 39.90%  | Actual outcome:  yes\n"
           ],
           "name": "stdout"
         }
