--- a/customerKaggle.ipynb
+++ b/customerKaggle.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AxMn6ZWpJDutd2yIVMIQRJszWCW_zb7F",
-      "authorship_tag": "ABX9TyMkFU8ah0KknMa6fn8rQHMi",
+      "authorship_tag": "ABX9TyOKfdqdz4MFPVlSPMmdzeqx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,12 +60,13 @@
         "from tensorflow.keras import layers\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        " \n",
         "\n",
         "# operazione che fa in modo che i numeri siano più leggibili\n",
         "np.set_printoptions(precision=3, suppress=True)"
       ],
-      "execution_count": 98,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -87,7 +88,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "8411dd16-1580-44ef-8ea3-cd85e33ed867"
+        "outputId": "38e530f6-1ee4-4bff-929b-e466517ed472"
       },
       "source": [
         "# Path of the file to read\n",
@@ -100,7 +101,7 @@
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 99,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +287,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 12
         }
       ]
     },
@@ -309,14 +310,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 299
         },
-        "outputId": "6f33c0dc-cdc8-4812-8143-1b0bd7a0183f"
+        "outputId": "851e4de4-9bd6-44c5-f148-ee8a42dda060"
       },
       "source": [
-        "# Procediamo con l'eliminazione dei dati non validi (NaN)\n",
+        "# eliminazione dei dati non validi (NaN)\n",
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 100,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +503,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 13
         }
       ]
     },
@@ -525,7 +526,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "37636205-0d3f-4244-de20-c606fed077fe"
+        "outputId": "ad537d74-42f5-4263-ebab-21fbf94ea77c"
       },
       "source": [
         "#tutte le colonne che contengono stringhe devono essere trasformate in colonne che contengono interi \n",
@@ -539,7 +540,7 @@
         "df.head()\n",
         "\n"
       ],
-      "execution_count": 101,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +726,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 14
         }
       ]
     },
@@ -748,13 +749,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 215
         },
-        "outputId": "b751b244-99a6-4fd4-b17e-f4fc9a06e397"
+        "outputId": "5152982a-41b2-40c9-b110-d526744cf5ee"
       },
       "source": [
-        "df = df.drop(['customerID', 'gender','Partner'], axis=1)\n",
+        "df = df.drop(['customerID', 'gender'], axis=1)\n",
         "df.head()"
       ],
-      "execution_count": 102,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,6 +781,7 @@
               "      <th></th>\n",
               "      <th>Churn</th>\n",
               "      <th>SeniorCitizen</th>\n",
+              "      <th>Partner</th>\n",
               "      <th>Dependents</th>\n",
               "      <th>tenure</th>\n",
               "      <th>PhoneService</th>\n",
@@ -801,6 +803,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
@@ -825,6 +828,7 @@
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>54.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>2.0</td>\n",
@@ -845,6 +849,7 @@
               "      <th>2</th>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
@@ -867,6 +872,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>4.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
@@ -885,6 +891,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
@@ -909,20 +916,20 @@
               "</div>"
             ],
             "text/plain": [
-              "   Churn  SeniorCitizen  ...  MonthlyCharges  TotalCharges\n",
-              "0    0.0            0.0  ...           64.85       1336.80\n",
-              "1    0.0            0.0  ...           97.20       5129.45\n",
-              "2    1.0            0.0  ...           23.45         23.45\n",
-              "3    1.0            0.0  ...           70.20        237.95\n",
-              "5    0.0            0.0  ...           69.55        521.35\n",
+              "   Churn  SeniorCitizen  Partner  ...  PaymentMethod  MonthlyCharges  TotalCharges\n",
+              "0    0.0            0.0      0.0  ...            3.0           64.85       1336.80\n",
+              "1    0.0            0.0      0.0  ...            0.0           97.20       5129.45\n",
+              "2    1.0            0.0      1.0  ...            2.0           23.45         23.45\n",
+              "3    1.0            0.0      0.0  ...            2.0           70.20        237.95\n",
+              "5    0.0            0.0      0.0  ...            2.0           69.55        521.35\n",
               "\n",
-              "[5 rows x 18 columns]"
+              "[5 rows x 19 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 15
         }
       ]
     },
@@ -943,41 +950,49 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 151
         },
-        "outputId": "b8529d10-22e3-4d00-8fd3-26522442fecc"
+        "outputId": "aa94942a-61b0-452b-84f3-3a5249757b3a"
       },
       "source": [
         "train, test = train_test_split(df)\n",
-        "features =['SeniorCitizen','Dependents','tenure','PhoneService','MultipleLines','InternetService','OnlineSecurity','OnlineBackup','DeviceProtection','TechSupport','StreamingTV','StreamingMovies','Contract','PaperlessBilling','PaymentMethod','MonthlyCharges','TotalCharges']\n",
+        "features =['SeniorCitizen','Partner','Dependents','tenure','PhoneService','MultipleLines','InternetService','OnlineSecurity','OnlineBackup','DeviceProtection','TechSupport','StreamingTV','StreamingMovies','Contract','PaperlessBilling','PaymentMethod','MonthlyCharges','TotalCharges']\n",
         "X = train[features]\n",
         "Y = train['Churn']\n",
         "X_test = test[features]\n",
         "Y_test =test['Churn']\n",
         "\n",
-        "# Specify Model\n",
-        "model = DecisionTreeClassifier()\n",
+        "# Specify Model : viene utilizzato RandomForestCLaasifier\n",
+        "#La foresta casuale, come suggerisce il nome, \n",
+        "#è costituita da un gran numero di singoli alberi decisionali che operano come un insieme(differentemente per il DecisionTreeClassifier che opera su un albero di decisione).\n",
+        "#Ogni singolo albero nella foresta casuale genera una previsione di classe basandosi sui suoi attributi ed esprime un voto per quella classe\n",
+        "# e la classe con il maggior numero di voti diventa la previsione del nostro modello\n",
+        "#Mentre alcuni alberi potrebbero essere sbagliati, molti altri alberi avranno ragione, quindi come gruppo gli alberi sono in grado di muoversi nella direzione corretta. \n",
+        "#Le previsioni (e quindi gli errori) fatte dai singoli alberi devono avere basse correlazioni tra loro.\n",
+        "model = RandomForestClassifier(random_state=1)\n",
         "# Fit Model\n",
         "model.fit(X, Y)"
       ],
-      "execution_count": 105,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='gini',\n",
-              "                       max_depth=None, max_features=None, max_leaf_nodes=None,\n",
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='gini', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
               "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
               "                       min_samples_leaf=1, min_samples_split=2,\n",
-              "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
-              "                       random_state=None, splitter='best')"
+              "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+              "                       n_jobs=None, oob_score=False, random_state=1, verbose=0,\n",
+              "                       warm_start=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 105
+          "execution_count": 16
         }
       ]
     },
@@ -1000,7 +1015,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "df28bdc1-eac3-4bce-817a-fa7ee44ea2e3"
+        "outputId": "1c7eebc1-3c22-40da-8f7d-5695cc74d9f6"
       },
       "source": [
         "\n",
@@ -1008,12 +1023,12 @@
         "train_acc = metrics.accuracy_score(Y,train_predictions)\n",
         "print('Accuracy train: %s'  % train_acc)"
       ],
-      "execution_count": 106,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy train: 0.9985775248933144\n"
+            "Accuracy train: 0.9983404457088667\n"
           ],
           "name": "stdout"
         }
@@ -1038,19 +1053,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "24aaa65f-7c98-4f06-9872-816d67a8ad59"
+        "outputId": "6911b0f0-e481-44f3-b922-0f551044b54d"
       },
       "source": [
         "test_predictions = model.predict(X_test)\n",
         "test_acc=metrics.accuracy_score(Y_test,test_predictions)\n",
         "print('Accuracy test: %s'  % test_acc)"
       ],
-      "execution_count": 107,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy test: 0.7204836415362731\n"
+            "Accuracy test: 0.7972972972972973\n"
           ],
           "name": "stdout"
         }
