--- a/customerKaggle.ipynb
+++ b/customerKaggle.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AxMn6ZWpJDutd2yIVMIQRJszWCW_zb7F",
-      "authorship_tag": "ABX9TyOKfdqdz4MFPVlSPMmdzeqx",
+      "authorship_tag": "ABX9TyPwNVvRTygroEkCX5k+i/7z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,7 @@
         "colab": {}
       },
       "source": [
+        "!pip install\n",
         "import pandas as pd\n",
         "import functools\n",
         "import numpy as np\n",
@@ -66,7 +67,7 @@
         "# operazione che fa in modo che i numeri siano più leggibili\n",
         "np.set_printoptions(precision=3, suppress=True)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +93,7 @@
       },
       "source": [
         "# Path of the file to read\n",
-        "customer_file_path = \"/content/drive/My Drive/WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
+        "customer_file_path = \"./WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
         "df = pd.read_csv(customer_file_path)\n",
         "df.head()\n",
         "# Sostituisco ad ogni stringa vuota il valore 'NaN'\n",
@@ -101,7 +102,7 @@
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +318,7 @@
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +541,7 @@
         "df.head()\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +756,7 @@
         "df = df.drop(['customerID', 'gender'], axis=1)\n",
         "df.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,7 +974,7 @@
         "# Fit Model\n",
         "model.fit(X, Y)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1024,7 @@
         "train_acc = metrics.accuracy_score(Y,train_predictions)\n",
         "print('Accuracy train: %s'  % train_acc)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1061,7 @@
         "test_acc=metrics.accuracy_score(Y_test,test_predictions)\n",
         "print('Accuracy test: %s'  % test_acc)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
