--- a/customerTensorflowProva.ipynb
+++ b/customerTensorflowProva.ipynb
@@ -6,7 +6,7 @@
       "name": "customerTensorflowProva.ipynb",
       "provenance": [],
       "mount_file_id": "1MOl10dr-xObOTQROUcS5k60bHbc-QWX7",
-      "authorship_tag": "ABX9TyOE5L38ByC42WcoPtPFC8cP",
+      "authorship_tag": "ABX9TyPe13SNV3gIfjgbWLbUmnAC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,7 @@
         "outputId": "5e7690ad-e9d0-4ce5-dc9f-a6ecffd82798"
       },
       "source": [
+        "!pip install\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import tensorflow as tf\n",
@@ -57,12 +58,12 @@
         "# operazione che fa in modo che i numeri siano più leggibili\n",
         "np.set_printoptions(precision=3, suppress=True)\n",
         "\n",
-        "data_path =\"/content/drive/My Drive/WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
+        "data_path =\"./WA_Fn-UseC_-Telco-Customer-Churn.train.csv\"\n",
         "df = pd.read_csv(data_path)\n",
         "target_label =\"Churn\"\n",
         "df.head()\n"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +281,7 @@
         "df.replace(\"?\", np.nan, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +498,7 @@
         "df.dropna(inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -719,7 +720,7 @@
         "# mostro il dataset dopo l'operazione\n",
         "df.head()\n"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +946,7 @@
         "train, test = train_test_split(df, test_size=0.1)\n",
         "train, val = train_test_split(train, test_size=0.1)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +977,7 @@
         "#addestramento e impostazione epoche\n",
         "model.fit(train_dataset, epochs=30)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1095,7 @@
         "test_loss, test_accuracy = model.evaluate(test_dataset)\n",
         "print('\\n\\nTest Loss {}, Test Accuracy {}'.format(test_loss, test_accuracy))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1146,7 +1147,7 @@
         "        \" | Actual outcome: \",\n",
         "        (\"yes\" if bool(yes) else \"no\"))\n"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
