--- a/customerTensorflowProva.ipynb
+++ b/customerTensorflowProva.ipynb
@@ -6,7 +6,7 @@
       "name": "customerTensorflowProva.ipynb",
       "provenance": [],
       "mount_file_id": "1MOl10dr-xObOTQROUcS5k60bHbc-QWX7",
-      "authorship_tag": "ABX9TyPe13SNV3gIfjgbWLbUmnAC",
+      "authorship_tag": "ABX9TyPSh7ORP+e4H5f7s4zg4eJs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "outputId": "5e7690ad-e9d0-4ce5-dc9f-a6ecffd82798"
       },
       "source": [
-        "!pip install\n",
+        "!pip install --user requirements.txt\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import tensorflow as tf\n",
