--- a/customerKaggle.ipynb
+++ b/customerKaggle.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AxMn6ZWpJDutd2yIVMIQRJszWCW_zb7F",
-      "authorship_tag": "ABX9TyPwNVvRTygroEkCX5k+i/7z",
+      "authorship_tag": "ABX9TyM/vJwaPBExzRhQL95PG7fe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {}
       },
       "source": [
-        "!pip install\n",
+        "!pip install --user requirements.txt\n",
         "import pandas as pd\n",
         "import functools\n",
         "import numpy as np\n",
